debugging error codes on weather script

--- a/weather.html
+++ b/weather.html
@@ -13,20 +13,24 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="weather.css" />
 
 		​
 
-		<title>Weather Dashboard</title>
+		<title>WeatherApp</title>
 	</head>
-
-	​
-
 	<body>
-		<header class="container-fluid text-center text-white bg-dark p-2">
-			<h1>Weather Dashboard</h1>
-		</header>
-
-		​
+		<nav class="navbar navbar-default" id="nav_bar">
+			<div class="container">
+				<div class="navbar-header">
+					<a href="" class="navbar-brand navbar-link weather">
+						<img src="weatherlogo.jpg" class="img-responsive" id="logo" alt="" /><strong
+							>Weather App</strong
+						></a
+					>
+				</div>
+			</div>
+		</nav>
 
 		<div class="container-fluid">
 			<div class="row">
