my api returning error 404

--- a/weather.html
+++ b/weather.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 	​
 
@@ -38,9 +37,9 @@
 					<h5 class="mt-1">Search for a City:</h5>
 
 					<div class="form-inline form-group">
-						<input class="form-control" type="text" id="search-value" />
+						<input class="form-control" type="input" id="search-input" />
 
-						<button class="btn btn-primary" id="search-button"><i class="fa fa-search"></i></button>
+						<button class="btn btn-primary" id="searchbtn"><i class="fa fa-search"></i></button>
 					</div>
 
 					​
@@ -50,10 +49,10 @@
 
 				​
 
-				<div class="col-lg-9">
-					<div id="today" class="mt-3"></div>
+				<div class="col-lg-9 text-center">
+					<div id="weathernow" class="mt-3"></div>
 
-					<div id="forecast" class="mt-3"></div>
+					<div class="row forecast-now" id="forecast" class="mt"></div>
 				</div>
 			</div>
 		</div>
