--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-		<link rel="stylesheet" href="weather.css" />
+		<link rel="stylesheet" href="style.css" />
 
 		​
 
@@ -62,7 +62,7 @@
 
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-		<script src="weather.js"></script>
+		<script src="app.js"></script>
 	</body>
 
 	​
