--- a/Index.html
+++ b/Index.html
@@ -15,8 +15,6 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="style.css" />
 
-		​
-
 		<title>WeatherApp</title>
 	</head>
 	<body>
@@ -34,7 +32,7 @@
 
 		<div class="container-fluid">
 			<div class="row">
-				<aside class="col-lg-3 bg-light">
+				<aside class="col bg-light">
 					<h5 class="mt-1">Search for a City:</h5>
 
 					<div class="form-inline form-group">
@@ -51,7 +49,7 @@
 				​
 
 				<div class="col-lg-9 text-center">
-					<div id="weathernow" class="mt-3"></div>
+					<div id="weathernow" class="mt"></div>
 
 					<div class="row forecast-now" id="forecast" class="mt"></div>
 				</div>
