--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
 		<script src="app.js"></script>
+		<footer id="footer-portfolio">copyright</footer>
+		
 	</body>
 
 	​
